// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package messaging;

// Définition du message de demande
message SendMessageRequest {
  string sender = 1;
  string recipient = 2;
  string message = 3;
}

// Définition du message de réponse
message SendMessageResponse {
  string status = 1;
}

// Définition du service de messagerie
service MessagingService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}
